<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/inputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/prefixInput"/>

    <View
        android:id="@+id/inputSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/inputTextView"
        android:background="@color/colorBorderGray"/>

    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/inputSeparator"
        android:text="@string/prefixOutput"/>

    <View
        android:id="@+id/outputSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/outputTextView"
        android:background="@color/colorBorderGray"/>

    <include layout="@layout/buttons"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
</RelativeLayout>
